--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.container-div {
+/* .container-div {
   margin: auto;
   width: 40%;
   border: 1px solid black;
@@ -11,4 +11,4 @@
   font-weight: bold;
   padding-bottom: 10px;
   letter-spacing: 2px;
-}
+} */
