--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,9 @@
-.list-header {
+
+/* body {
+  background-color: red;
+} */
+
+/* .list-header {
   background: #f7f7f7;
   border: 1px solid darken(#f7f7f7, 7%);
   color: #666;
@@ -11,4 +16,4 @@
   display: block;
   color: inherit;
   padding: 5px 10px;
-}
+} */
