--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -3,3 +3,5 @@
 @import './components/header';
 @import './components/forms';
 @import './components/userHomePage';
+@import './components/adminDashboard';
+@import './components/reports';
