--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -8,8 +8,10 @@
   h1 {
     margin: 0;
   }
+  padding-left: $xl-size;
 }
 
 .header--link {
-  color: $off-white
+  color: $off-white;
+  padding-right: $xl-size;
 }
