--- a/client/src/styles/components/_userHomePage.scss
+++ b/client/src/styles/components/_userHomePage.scss
@@ -41,7 +41,7 @@ html, body {
 
 .side_section_stats {
   padding-top: 90px;
-  padding-bottom: 90px;
+  padding-bottom: 18vh;
 }
 
 .side_section_stats h2 {
