--- a/client/src/styles/components/_userHomePage.scss
+++ b/client/src/styles/components/_userHomePage.scss
@@ -5,24 +5,31 @@ html, body {
 }
 
 .side_section {
-  //background-color: #4e555b;
   background: #0F2027; /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #2C5364, #203A43, #0F2027); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
 
 
 .side_section {
   color: #F5F5F5;
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);;
 }
 
 .submit_button {
   text-align: center;
 }
 
+
 .side_section_date {
   font-size: 1.3em;
+
+  text-shadow: 0 4px 3px rgba(0, 0, 0, 0.4),
+  0 8px 13px rgba(0, 0, 0, 0.1),
+  0 18px 23px rgba(0, 0, 0, 0.1);
+
+  letter-spacing: .075em;
+
   padding-top: 10px;
   padding-bottom: 30px;
 }
@@ -100,4 +107,40 @@ html, body {
   border-radius: 2px;
   box-shadow: 1px 1px 4px black;
   padding: 1px 5px;
+}
+
+.button_style {
+  padding: 5px 10px;
+  width: 75px;
+  height: 35px;
+  font: bold 15px Helvetica, sans-serif;
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
+}
+
+.text_style {
+  text-shadow: 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.delete_award_button {
+  background-color: #C90700;
+  width: 70px;
+  height: 30px;
+  font: 15px Helvetica, sans-serif;
+  letter-spacing: .075em;
+  text-shadow: 1px 2px rgba(0, 0, 0, 0.1);
+
+}
+
+.delete_award_button:hover {
+  background-color: #B00600;
+}
+
+
+.cancel_create_award {
+  background-color: #C90700;
+  border: none;
+}
+
+.cancel_create_award:hover {
+  background-color: #B00600;
 }
