added favicon and home page styling

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -5,3 +5,4 @@
 @import './components/userHomePage';
 @import './components/adminDashboard';
 @import './components/reports';
+@import './components/homePage';
