--- a/client/src/styles/components/_userHomePage.scss
+++ b/client/src/styles/components/_userHomePage.scss
@@ -144,3 +144,21 @@ html, body {
 .cancel_create_award:hover {
   background-color: #B00600;
 }
+
+.confirm_button_spacing Button {
+  margin: 2px;
+}
+
+
+.confirm_buttons {
+  text-shadow: 1px 2px rgba(0, 0, 0, 0.1);
+  font: 11px Helvetica, sans-serif;
+}
+
+.delete_button_color {
+  background-color: #C90700;
+}
+
+.delete_button_color:hover {
+  background-color: #B00600;
+}
