added styling to error page

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -6,3 +6,4 @@
 @import './components/adminDashboard';
 @import './components/reports';
 @import './components/homePage';
+@import './components/error';
