changed style color for admin menu

--- a/client/src/styles/components/_adminDashboard.scss
+++ b/client/src/styles/components/_adminDashboard.scss
@@ -21,7 +21,9 @@
 }
 
 .admin--menu a:hover {
-  background-color: #555;
+  background: #0F2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #2C5364, #203A43, #0F2027); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027);
   color: white;
 }
 
