added reset password component

--- a/client/src/styles/components/_homePage.scss
+++ b/client/src/styles/components/_homePage.scss
@@ -1,9 +1,8 @@
 .home {
   align-items: center;
-  background: url('/images/homeImage.jpg');
   background-size: cover;
   display: flex;
-  height: 95vh;
+  //height: 95vh;
   justify-content: center;
   
 }
