--- a/client/src/styles/components/_forms.scss
+++ b/client/src/styles/components/_forms.scss
@@ -4,6 +4,7 @@
   width: 50%;
   margin: 0 auto;
   margin-top: 10%;
+  background: white;
 }
 
 .login--inner {
@@ -36,3 +37,13 @@
 .reset-pw {
   font-size: $s-size;
 }
+
+
+.userSigninPage {
+  display: flex;
+  height: 95vh;
+  background: #8360c3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2ebf91, #8360c3); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2ebf91, #8360c3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
