--- a/client/src/styles/components/_userHomePage.scss
+++ b/client/src/styles/components/_userHomePage.scss
@@ -2,6 +2,13 @@ html, body {
   width: 100%;
   height: 100%;
   position: absolute;
+
+
+  background: #8360c3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, rgba(46, 191, 145, .5), rgba(131, 96, 195, .5)); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, rgba(46, 191, 145, .1), rgba(131, 96, 195, .1)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  padding-bottom: 95vh;
 }
 
 .side_section {
@@ -48,7 +55,7 @@ html, body {
 
 .side_section_stats {
   padding-top: 90px;
-  padding-bottom: 18vh;
+  padding-bottom: 5vh;
 }
 
 .side_section_stats h2 {
@@ -64,6 +71,12 @@ html, body {
 
 
 
+
+.award_table {
+  width: 100%;
+}
+
+
 .award_table thead {
   font-size: .85em;
   font-weight: bold;
@@ -72,6 +85,25 @@ html, body {
 .award_data th {
   font-weight: normal;
 }
+
+
+.award_table th, tr, td, Table {
+    border: 1px solid black;
+}
+
+.award_table thead{
+    background-color: #CCCCCC;
+
+}
+
+.award_table tbody {
+  background-color: #E8E8E8;
+}
+
+
+
+
+
 
 
 .input_width {
@@ -163,3 +195,4 @@ html, body {
 .delete_button_color:hover {
   background-color: #B00600;
 }
+
