--- a/client/src/styles/components/_userHomePage.scss
+++ b/client/src/styles/components/_userHomePage.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -7,30 +8,37 @@ html, body {
 }
 
 .side_section {
-  background: #0F2027; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #2C5364, #203A43, #0F2027); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-
 .side_section {
-  color: #F5F5F5;
-  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);;
+  color: #f5f5f5;
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
 
 .submit_button {
   text-align: center;
 }
 
-
 .side_section_date {
   font-size: 1.3em;
 
-  text-shadow: 0 4px 3px rgba(0, 0, 0, 0.4),
-  0 8px 13px rgba(0, 0, 0, 0.1),
-  0 18px 23px rgba(0, 0, 0, 0.1);
+  text-shadow: 0 4px 3px rgba(0, 0, 0, 0.4), 0 8px 13px rgba(0, 0, 0, 0.1),
+    0 18px 23px rgba(0, 0, 0, 0.1);
 
-  letter-spacing: .075em;
+  letter-spacing: 0.075em;
 
   padding-top: 10px;
   padding-bottom: 30px;
@@ -64,42 +72,40 @@ html, body {
   padding-top: 40px;
 }
 
-
-
-
 .award_table {
   width: 100%;
 }
 
-
-.award_table thead {
-  font-size: .85em;
-  font-weight: bold;
+.award_table {
+  thead {
+    font-size: 0.85em;
+    font-weight: bold;
+  }
 }
 
-.award_data th {
-  font-weight: normal;
+.award_data {
+  th {
+    font-weight: normal;
+  }
 }
 
-
-.award_table th, tr, td, Table {
+.award_table {
+  th, tr, td, table {
     border: 1px solid black;
+  }
 }
 
-.award_table thead{
-    background-color: #CCCCCC;
-
+.award_table {
+  thead {
+    background-color: #cccccc;
+  }
 }
 
-.award_table tbody {
-  background-color: #E8E8E8;
+.award_table {
+  tbody {
+    background-color: #e8e8e8;
+  }
 }
-
-
-
-
-
-
 
 .input_width {
   width: 100%;
@@ -110,16 +116,15 @@ html, body {
 }
 
 .updateAccountButton {
-  background-color: #BF7517;
+  background-color: #bf7517;
   border: none;
   border-radius: 5px;
   color: white;
 }
 
 .updateAccountButton:hover {
-  background-color: #B56F16;
+  background-color: #b56f16;
 }
-
 
 .sideSectionRow {
   font-size: 1em;
@@ -130,8 +135,7 @@ html, body {
   padding: 0;
 }
 
-
-.form_padding Input {
+.form_padding input {
   border-radius: 2px;
   box-shadow: 1px 1px 4px black;
   padding: 1px 5px;
@@ -150,33 +154,30 @@ html, body {
 }
 
 .delete_award_button {
-  background-color: #C90700;
+  background-color: #c90700;
   width: 70px;
   height: 30px;
   font: 15px Helvetica, sans-serif;
-  letter-spacing: .075em;
+  letter-spacing: 0.075em;
   text-shadow: 1px 2px rgba(0, 0, 0, 0.1);
-
 }
 
 .delete_award_button:hover {
-  background-color: #B00600;
+  background-color: #b00600;
 }
 
-
 .cancel_create_award {
-  background-color: #C90700;
+  background-color: #c90700;
   border: none;
 }
 
 .cancel_create_award:hover {
-  background-color: #B00600;
+  background-color: #b00600;
 }
 
-.confirm_button_spacing Button {
+.confirm_button_spacing button {
   margin: 2px;
 }
-
 
 .confirm_buttons {
   text-shadow: 1px 2px rgba(0, 0, 0, 0.1);
@@ -184,10 +185,9 @@ html, body {
 }
 
 .delete_button_color {
-  background-color: #C90700;
+  background-color: #c90700;
 }
 
 .delete_button_color:hover {
-  background-color: #B00600;
+  background-color: #b00600;
 }
-
